# teqla

./: .gitignore  LICENSE  README.md
core/: Cargo.toml
core/src/: dag.rs  main.rs  net.rs  pouw.rs
docs/: whitepaper-v0.1.md
infra/: docker-compose.yml
sdk/src/: index.ts
tests/: README.md
wallet/: README.md
