[package]
name = "teqla-core"
version = "0.1.0"
edition = "2021"
authors = ["TEQLA contributors"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.10"
hex = "0.4"
rand = "0.8"
# libp2p placeholder (pin a versão quando começar rede real)
# libp2p = { version = "0.53", features = ["gossipsub", "tcp", "websocket", "noise", "yamux"] }